[package]
name = "reth_util"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Utility library made for blockchain client."
authors = ["draganrakita <dragan.rakita@gnosis.io>"]
readme = "README.md"
homepage = ""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
